--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 autopep8==1.5.4
+boto3==1.16.59
+botocore==1.19.59
 certifi==2020.12.5
 click==7.1.2
 dominate==2.6.0
 elasticsearch==7.10.1
 Flask==1.1.2
+Flask-Bootstrap==3.3.7.1
 Flask-Bootstrap4==4.0.2
 Flask-CKEditor==0.4.4.1
 Flask-Login==0.5.0
@@ -12,10 +15,14 @@ Flask-WTF==0.14.3
 gunicorn==20.0.4
 itsdangerous==1.1.0
 Jinja2==2.11.2
+jmespath==0.10.0
 MarkupSafe==1.1.1
 psycopg2-binary==2.8.6
 pycodestyle==2.6.0
+python-dateutil==2.8.1
 python-dotenv==0.15.0
+s3transfer==0.3.4
+six==1.15.0
 SQLAlchemy==1.3.22
 toml==0.10.2
 urllib3==1.26.2
